# TER-Composite

./: .gitignore  _codeql_detected_source_root
FEM/: CMakeLists.txt
FEM/_codeql_build_dir/: cmake_install.cmake
FEM/config/: composite_simple_config.txt  flexion_config.txt  traction_config.txt
FEM/geo/: composite_simple.geo  rectangle.geo
FEM/mesh/: composite_simple.msh  rectangle0.msh  rectangle1.msh  rectangle2.msh  rectangle3.msh  simple_rectangle.msh
FEM/results/: results.vtk
FEM/src/: BoundaryConditions.cpp  BoundaryConditions.h  Config.cpp  Config.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshReader.cpp  MeshReader.h  Solver.cpp  Solver.h  Tests.cpp  Tests.h  main.cpp
Maillage/: cercles.txt  maillage.py  maillage_fibres.geo
Preprocessing/: cercles.txt  maillage.py  preprocessing.py  traitement.py
Preprocessing/geo/: maillage_fibres.geo  maillage_fibres2.geo  rectangle.geo
Traitement/: traitement.py
rapport/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
